noinst_LIBRARIES=libmobility.a
INCLUDES=-I$(top_srcdir)/include
libmobility_a_SOURCES=	\
	random_billiard_mobility.c  	\
	random_static_mobility.c  	\
	static_billiard_mobility.c  	\
	static_static_mobility.c	\
	random_billiard_mobility.h  	\
	random_static_mobility.h  	\
	static_billiard_mobility.h  	\
	static_static_mobility.h

